<resources>
    <string name="app_name">RunMate</string>
    <string name="subtitle">A social network for runners</string>
    <string name="content_description_background">RunMate Background Image</string>

    <string name="login_error_message">Please enter a username and password</string>
    <string name="login_error_title">Sorry, there was a problem</string>

    <string name="title_activity_login">Login</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up <u>here</u> </string>
    <string name="forgot_password_text">Forgotten your <u>password?</u> </string>
    <string name="content_desc_button_divider">Button divider</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="forgot_password_error_title">Sorry, there was a problem</string>
    <string name="forgot_password_error_message">Please enter an email address</string>
    <string name="forgot_password_progress_dialog_title">Please wait...</string>
    <string name="forgot_password_progress_dialog_message">Checking your email address</string>
    <string name="reset_password_success_title">Reset request successful</string>
    <string name="reset_password_success_message">Please check your email account</string>

    <string name="title_activity_sign_up">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="full_name_hint">Name</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="cancel_sign_up_button_label">CANCEL</string>
    <string name="reset_password_button_label">SUBMIT</string>
    <string name="cancel_reset_password_button_label">CANCEL</string>
    <string name="enter_email_text">Enter your email to reset your password</string>

    <string name="sign_up_error_title">Sorry, there was a problem</string>
    <string name="sign_up_error_message">Please make sure all of the fields are completed</string>
    <string name="error_title">Sorry about this...</string>
    <string name="confirm_password_error_title">Sorry, there was a problem</string>
    <string name="confirm_password_error_message">Please ensure your password and confirmation password are matching</string>
    <string name="sign_up_progress_dialog_title">Please wait</string>
    <string name="sign_up_progress_dialog_message">Signing you up to RunMate</string>

    <string name="edit_friends_progress_dialog_title">Please wait</string>
    <string name="edit_friends_progress_dialog_message">Updating your friends list</string>
    <string name="my_runs_progress_dialog_title">Please wait</string>
    <string name="my_runs_progress_dialog_message">Updating Runs</string>
    <string name="inbox_progress_dialog_title">Please wait</string>
    <string name="inbox_progress_dialog_message">Updating your inbox</string>

    <string name="log_in_progress_dialog_title">Please wait</string>
    <string name="log_in_progress_dialog_message">Logging you in to RunMate</string>
    <string name="password_validation_error_title">Sorry, there was a problem</string>
    <string name="password_validation_error_message">Your password should be at least 6 characters long, contain at least 1 lower case letter, one upper case letter and at least 1 digit.</string>
    <string name="send_route_error_title">Sorry, there was a problem</string>
    <string name="send_route_error_message">Please make sure all of the fields are completed</string>
    <string name="send_route_time_error_title">Check your watch...</string>
    <string name="send_route_time_error_message">Choose a time that is greater than the present</string>


    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="menu_add_friend_label">Add Friends</string>
    <string name="action_search">Search</string>

    <string name="title_section1">My Runs</string>
    <string name="title_section2">Inbox</string>
    <string name="title_section3">Friends</string>

    <string name="progress_bar">Progress Bar</string>

    <string name="empty_inbox_label">No new run messages</string>
    <string name="empty_my_runs_label">No accepted runs yet</string>
    <string name="empty_my_run_history">No runs completed yet... Get up and go!</string>
    <string name="empty_friends_label">No friends yet... Add some to begin</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="title_activity_maps_activity_manual_polyline">Manual Polyline</string>
    <string name="title_activity_maps_activity_directions_polyline">Directions Polyline</string>
    <string name="plot_route_label">Plot run</string>

    <string name="menu_camera_label">Camera</string>
    <string name="str_btn_send">Send Route</string>
    <string name="str_btn_accept">Accept</string>
    <string name="str_btn_decline">Decline</string>
    <string name="str_btn_animate">Animate \nRoute</string>
    <string name="str_btn_delete_route">Delete</string>
    <string name="str_btn_run_stats">Stats</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string-array name="plot_route_choices">
        <item>Plot off-the-track run</item>
        <item>Plot road run</item>
        <item>Track your run to send</item>
    </string-array>

    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry, there was an error</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The selected file is too large. Please select a new file</string>
    <string name="error_selecting_recipient_message">There was an error with the recipient selected. Please try again</string>
    <string name="error_selecting_recipient_title">We\'re sorry</string>
    <string name="error_sending_title">We\'re sorry</string>
    <string name="error_sending_message">There was an error sending your message. Please try again</string>
    <string name="error_declining_route_title">We\'re sorry</string>
    <string name="error_declining_route_message">There was an error declining the route. Please try again</string>
    <string name="error_accepting_route_title">We\'re sorry</string>
    <string name="error_accepting_route_message">There was an error accepting the route. Please try again</string>
    <string name="error_deleting_route_title">We\'re sorry</string>
    <string name="error_delete_route_message">There was an error deleting the route. Please try again</string>
    <string name="success_decline_route">Route successfully deleted</string>
    <string name="success_delete_route">Route successfully deleted</string>
    <string name="success_accept_route">Route added to My Runs</string>
    <string name="title_activity_recipients">Choose Recipients</string>

    <string name="empty_recipients_list_string">Choose some friends first...</string>

    <string name="menu_send_label">Send</string>
    <string name="success_message">Message sent</string>
    <string name="title_activity_view_image">RunMate</string>
    <string name="title_activity_maps_activity_directions_multiple">Directions Map</string>

    <string name="route_creation_error_message">Please ensure you have at least 2 points selected</string>
    <string name="route_creation_error_title">Tap the map</string>
    <string name="route_undo_error_message">No more routes to undo</string>
    <string name="route_undo_error_title">Steady on...</string>
    <string name="title_activity_route_recipients">Route Recipients</string>
    <string name="success_route">Route sent</string>
    <string name="error_sending_route_message">There was an error sending your route. Please try again</string>
    <string name="title_activity_maps_activity_display_route">Display Route</string>
    <string name="title_activity_inbox_route_fragment">Route Inbox</string>
    <string name="success_route_run">Route sent</string>
    <string name="success_save_run">Run saved</string>
    <string name="error_saving_run_message">There was an error saving your run.</string>
    <string name="error_saving_run_title">Sorry...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="distance_count">0 km</string>
    <string name="str_btn_undo">Undo</string>
    <string name="str_btn_complete_loop">Complete Loop</string>
    <string name="title_activity_maps_activity_track_run">Track Run</string>
    <string name="title_activity_maps_activity_run_history">Run History</string>

    <string name="start_updates">Start Run</string>
    <string name="stop_updates">Pause</string>
    <string name="save_run">Save Run</string>
    <string name="send_run">Send Run</string>
    <string name="delete_run">Delete Run</string>
    <string name="run_time_label">0:00</string>
    <string name="location_updated_message">New location detected... keep going</string>
    <string name="start_run_message">Start Run!</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_run_history">Run History</string>
    <string name="nav_item_my_profile">My Profile</string>
    <string name="nav_item_my_friends">My Friends</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_help">Help</string>
    <string name="nav_item_log_out">Log out</string>

    <string name="title_home">Home</string>
    <string name="title_my_runs">Run History</string>
    <string name="title_my_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="content_desc_message_icon">Message icon</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checked</string>

    <string name="push_notification_message">New RunMate route from %s</string>

    <string name="instructions_title">Using RunMate:</string>
    <string name="instructions_sub_title">Plotting a Route</string>
    <string name="instructions_instructions">Tap on the map to select the starting point,
        \nthen tap on each subsequent point to create an entire route.
        \nLong click anywhere on the map to clear it.
        \nYou also can undo a previous plotted point at any time by selecting the undo button.
        \nUse the Complete Loop button to return the route to the starting point.
        \nThen simply press the send button and select all of your friends you wish to include in your run.
    </string>

    <string name="my_profile_title">My Profile</string>

    <string name="take_picture_button_label">Take your picture</string>
    <string name="pick_from_gallery_button_label">Choose from gallery</string>
    <string name="title_activity_add_route_details">Add some details to your route</string>

    <string name="route_date_hint">Add a meet up date</string>
    <string name="route_time_hint">Add a meet up time</string>
    <string name="route_name_hint">Name your route</string>
    <string name="proposed_date_button_label">Choose a date</string>
    <string name="proposed_time_button_label">Choose a time</string>
    <string name="choose_friends_button_label">Choose some friends...</string>

</resources>
