<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navItemHome"
        android:icon="@mipmap/ic_tab_inbox"
        android:title="@string/nav_item_home"/>

    <item
        android:id="@+id/navItemRunHistory"
        android:icon="@mipmap/ic_tab_inbox"
        android:title="@string/nav_item_run_history"/>

    <item
        android:id="@+id/navItemMyProfile"
        android:icon="@mipmap/ic_tab_inbox"
        android:title="@string/nav_item_my_profile"/>


    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/navItemHelp"
                android:icon="@mipmap/ic_action_play_over_video"
                android:title="@string/nav_item_help"/>
            <item
                android:id="@+id/navItemSettings"
                android:icon="@mipmap/ic_action_play_over_video"
                android:title="@string/nav_item_settings"/>
        </menu>
    </item>

    <!--<group-->
    <!--android:id="@+id/group_settings_id">-->

    <!--<item-->
    <!--android:icon="@mipmap/ic_action_play_over_video"-->
    <!--android:title="Settings"/>-->
    <!--<item-->
    <!--android:icon="@mipmap/ic_action_play_over_video"-->
    <!--android:title="Help"/>-->
    <!--</group>-->

</menu>