<RelativeLayout
    style="@style/AuthBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khackett.runmate.ui.AddRouteDetailsActivity">

    <LinearLayout
        android:id="@+id/editDateTimeLayout"
        style="@style/AuthenticationFieldContainer">

        <TextView
            android:id="@+id/proposedDate"
            style="@style/AuthenticationEditText"/>

        <TextView
            android:id="@+id/proposedTime"
            style="@style/AuthenticationEditText"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDateTimeLayout"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_desc_button_divider"
        android:src="@mipmap/button_divider"/>

    <Button
        android:id="@+id/proposeDateButton"
        style="@style/AuthenticationButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editDateTimeLayout"
        android:layout_marginRight="0dp"
        android:layout_toLeftOf="@id/buttonDivider"
        android:text="@string/proposed_date_button_label"/>

    <Button
        android:id="@+id/proposeTimeButton"
        style="@style/AuthenticationButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editDateTimeLayout"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@id/buttonDivider"
        android:text="@string/proposed_time_button_label"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthenticationFieldContainer"
        android:layout_below="@id/buttonDivider">

        <EditText
            android:id="@+id/routeName"
            style="@style/AuthenticationEditText"
            android:hint="@string/route_name_hint"/>

    </LinearLayout>

    <Button
        android:id="@+id/chooseFriendsButton"
        style="@style/AuthenticationButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:text="@string/choose_friends_button_label"/>

</RelativeLayout>
