<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/fragmentMyProfile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pressedPurpleButton"
    tools:context=".InstructionsFragment$PlaceholderFragment">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthenticationBackgroundImage"
        android:background="@mipmap/background_fill"
        android:contentDescription="@string/content_description_background"/>

    <TextView
        android:id="@+id/instructionsTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/my_profile_title"
        android:textColor="#ffffff"
        android:textSize="45dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/instructionsTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_action_name"/>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_desc_button_divider"
        android:src="@mipmap/button_divider"/>

    <Button
        android:id="@+id/takePictureButton"
        style="@style/AuthenticationButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="0dp"
        android:layout_toLeftOf="@id/buttonDivider"
        android:text="@string/take_picture_button_label"/>

    <Button
        android:id="@+id/choosePictureButton"
        style="@style/AuthenticationButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@id/buttonDivider"
        android:text="@string/pick_from_gallery_button_label"/>

</RelativeLayout>
