<RelativeLayout
    style="@style/AuthBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khackett.runmate.ui.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthenticationBackgroundImage"
        android:contentDescription="@string/content_description_background"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthenticationTitle"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthenticationTitle.AuthenticationSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthenticationFieldContainer">

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthenticationEditText"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress">

            <requestFocus/>
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/resetPasswordButton"
        style="@style/AuthenticationButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:text="@string/reset_password_button_label"/>

    <TextView
        android:id="@+id/enterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPasswordButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/enter_email_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

</RelativeLayout>
