<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khackett.runmate.ui.InstructionsFragment">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionsFragment$PlaceholderFragment">

        <ImageView
            android:id="@+id/backgroundImage"
            style="@style/AuthenticationBackgroundImage"
            android:background="@mipmap/background_fill"
            android:contentDescription="@string/content_description_background"/>

        <TextView
            android:id="@+id/instructionsTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/instructions_title"
            android:textColor="#ffffff"
            android:textSize="45dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/instructionsSubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instructionsTitle"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/instructions_sub_title"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/instructionInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/instructionsSubTitle"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/message_vertical_padding"
            android:layout_marginRight="@dimen/message_vertical_padding"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/instructions_instructions"
            android:textColor="#ffffff"
            android:textSize="16dp"/>

    </RelativeLayout>

</FrameLayout>
