<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khackett.runmate.MapsActivityDirectionsMultiple">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.khackett.runmate.MapsActivityDirectionsMultiple">

        <TextView
            android:id="@+id/distanceCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginTop="15dp"
            android:background="#07000000"
            android:paddingStart="15dp"
            android:text="@string/distance_count"
            android:textColor="@color/ColorPrimaryRed"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </fragment>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_undo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:shadowRadius="5"
            android:text="@string/str_btn_undo"/>

        <Button
            android:id="@+id/btn_complete_loop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:shadowRadius="5"
            android:text="@string/str_btn_complete_loop"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/ic_send_black_24dp"
            android:gravity="center_vertical|center_horizontal"
            android:shadowRadius="5"/>

    </LinearLayout>


    <!--<fragment-->
    <!--android:id="@+id/map"-->
    <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_above="@id/linearLayoutTop"-->
    <!--tools:context="com.khackett.runmate.MapsActivityDirectionsMultiple"/>-->

</RelativeLayout>